Further embedded Vue.js into UI

--- a/assets/main.css
+++ b/assets/main.css
@@ -47,7 +47,7 @@ nav ul li.active {
 #menu-open-bar {
   padding: 0;
 }
-#menu-open-bar .top-menu {
+#menu-open-bar .search {
   padding: 20px;
   border-bottom: 1px solid #DADEE0;
 }
